.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}
  namespace: ${NAMESPACE}
spec:
  ports:
    - port: ${SERVICE_PORT}
      name: http
      targetPort: http
  selector:
    app: ${APP_NAME}
